fixed alignment, added aside and main features, more minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
 body {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+.gray-background {
+    background-color: #1a1a1a;
 }
 
 .float-right {
@@ -10,18 +15,81 @@ body {
 }
 
 .float-left {
-    
+    float: left;
+}
+
+.clear-left {
+    clear: left;
+}
+
+.clear-right {
+    clear: right;
+}
+
+.inline-block {
+    display: inline;
+}
+
+a {
+    text-decoration: none;
+    color: #e00007;
 }
 
 /*===============HEADER=================*/
 
+header {
+    height: 12%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    box-shadow: 3px 3px 3px 3px #333333;
+}
+
+li {
+    margin: 0 15px;
+}
+
+#logo {
+    padding-left: 20%;
+}
+
 body>header>span>h2 {
-    float: left;
     padding-left: 3%;
-    color: #e00007;
-    background-color: #3d3d3d;
+    color: #fff;
 }
 
 #header_tabs {
-    float: right;
+    display: block;
+    padding-right: 5%;
+    text-decoration: none;
+}
+
+#tab {
+    display: none;
+}
+
+#nav_menu: hover>#tab {
+    display: block;
+}
+
+#tab: active {
+    background-color: #fff;
+}
+
+/*=============HERO SECTION==============*/
+
+#hero {
+    background-color: #e40007;
+    width: 100%;
+    height: 315px;
+    margin-top: 10%;
+}
+
+/*==============ASIDE SECTION================*/
+
+#aside {
+    background-color: #000;
+    width: 30%;
+    height: 500px;
 }
